Fruit! and display on top also reorg
added fruit class
added display (doesnt do numbers yet)
reorganized player.evolve() to be readable

--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -33,30 +33,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Sam/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:253: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-ecb2e7aa497e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    336\u001b[0m             \u001b[0mbod\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvisual_shift\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshifts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mticker\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mshifts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mticker\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    337\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mscreen\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moverlap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbod\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 338\u001b[0;31m             \u001b[0mbod\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdraw\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgameDisplay\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mscreen\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpos\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    339\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    340\u001b[0m   \u001b[0;31m#  sleep(0.1)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/GitHub/Games/Boxy/Super_Classes.py\u001b[0m in \u001b[0;36mdraw\u001b[0;34m(self, canvas, zero, scale)\u001b[0m\n\u001b[1;32m    101\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdestruct_counter\u001b[0m \u001b[0;34m!=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0ms\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshapes\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 103\u001b[0;31m                 \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdraw\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcanvas\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpos\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mzero\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    104\u001b[0m         \u001b[0;31m# if destruct counter = 0, no go\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    105\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/GitHub/Games/Boxy/Super_Classes.py\u001b[0m in \u001b[0;36mdraw\u001b[0;34m(self, canvas, position, transform)\u001b[0m\n\u001b[1;32m    168\u001b[0m             \u001b[0mdraw_nodes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mtuple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatmul\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mposition\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mn\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnodes\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# position and transform nodes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    169\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolor\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m# if filled\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 170\u001b[0;31m                 \u001b[0mpygame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdraw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpolygon\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcanvas\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdraw_nodes\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mdraw_nodes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    171\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mline_color\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m# if outlined\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    172\u001b[0m                 \u001b[0mpygame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdraw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpolygon\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcanvas\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mline_color\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdraw_nodes\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mdraw_nodes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mline_width\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pygame\n",
     "\n",
@@ -67,6 +46,7 @@
     "import numpy as np\n",
     "from Super_Classes import Vector, Body, Shape, Looper\n",
     "import Platform\n",
+    "from Gettables import Fruit\n",
     "from random import randint\n",
     "import copy\n",
     "from Player import Player\n",
@@ -140,12 +120,33 @@
     "    master_box_list[-1].floating = True  \n",
     "ticker = -1\n",
     "\n",
+    "master_gettable_list = []\n",
+    "\n",
+    "for k in range(10):\n",
+    "    master_gettable_list.append(Fruit(a.pos + [600*S+box_size*2*k,-3*2*box_size]))\n",
+    "\n",
+    "\n",
     "shifts = [np.array([randint(-10,10)/5,randint(-10,10)/5]) for _ in range(5)]\n",
     "shifts.append(np.array([0,0]))\n",
     "\n",
-    "     \n",
     "\n",
-    "crashed = False     \n",
+    "icon_size = 20.0\n",
+    "display_fruit = Fruit([icon_size*1.5,icon_size*1.5])\n",
+    "display_fruit.transform *= icon_size/display_fruit.size[0]\n",
+    "display_box = Box.Wood([210+icon_size*1.5,icon_size*1.5])\n",
+    "display_box.transform *= icon_size/display_box.size[0]\n",
+    "\n",
+    "\n",
+    "def display_score(score_list):\n",
+    "    \n",
+    "    \n",
+    "    #score_list['lives']\n",
+    "    #score_list['fruit']\n",
+    "    #score_list['boxes']\n",
+    "    display_fruit.draw(gameDisplay)\n",
+    "    display_box.draw(gameDisplay)\n",
+    "    \n",
+    "     \n",
     "            \n",
     "left_key = False\n",
     "right_key = False\n",
@@ -162,8 +163,6 @@
     "    \n",
     "death_delay = 60 # time after death level keeps tickin'\n",
     "crashed = death_delay\n",
-    "box_list = copy.deepcopy(master_box_list)\n",
-    "platform_list = copy.deepcopy(master_platform_list)\n",
     "jump_timer = 0\n",
     "\n",
     "while True:\n",
@@ -175,8 +174,13 @@
     "            crashed = False\n",
     "            box_list = copy.deepcopy(master_box_list)\n",
     "            platform_list = copy.deepcopy(master_platform_list)\n",
+    "            gettable_list = copy.deepcopy(master_gettable_list)\n",
+    "            \n",
     "            relevant_one = None\n",
     "            foreground_list = []\n",
+    "            score_list = {'lives':14, 'fruit': 0, 'boxes':0}\n",
+    "            \n",
+    "            \n",
     "        else:    \n",
     "            crashed += 1\n",
     "\n",
@@ -264,7 +268,7 @@
     "\n",
     "\n",
     "\n",
-    "        for k,i in enumerate(box_list+platform_list):\n",
+    "        for k,i in enumerate(box_list+platform_list+gettable_list):\n",
     "\n",
     "            if i.solid: # if corporeal object (not fruit)\n",
     "                dim,gap = character.overlap_dim(i)\n",
@@ -285,7 +289,7 @@
     "                            i.bounces -=1\n",
     "                        break_box = (bounce and (i.bounces == 0 or i.vel[1]>0)) or hit # falling bouncy boxes break\n",
     "                        if bounce and not break_box:\n",
-    "                            if isinstance(character.resting_on,Body) or jump_timer == character.jump_anticipation:\n",
+    "                            if isinstance(character.resting_on,Body) or (jump_timer == character.jump_anticipation and dim == 1 and side == 1):\n",
     "                                break_box = True\n",
     "                            wood_bounce_sound()\n",
     "\n",
@@ -357,12 +361,13 @@
     "                        i.on_me.remove(character)\n",
     "\n",
     "            else: #non-corporeal, do not adjust velocity\n",
-    "                pass\n",
-    "               # if isinstance(i,Fruit):\n",
-    "               #     if character.overlap(i):\n",
-    "                #       #i.color = tuple([i*.98 for i in list(i.color)])\n",
-    "                 #       removal.append(i)\n",
-    "                  #      i.visible = False\n",
+    "    \n",
+    "                if isinstance(i,Fruit):\n",
+    "                    if character.overlap(i):\n",
+    "                       #i.color = tuple([i*.98 for i in list(i.color)])\n",
+    "                        gettable_list.remove(i)\n",
+    "                        ##fruit_sound()\n",
+    "                        i.visible = False\n",
     "\n",
     "        # overlaps on both sides for a given dimension, this should by design happen rarely\n",
     "        if any(all(i) for i in squeeze):\n",
@@ -384,7 +389,7 @@
     "    screen.pos = np.array([character.pos[0]-display_size[0]/2,0])\n",
     "    \n",
     "   \n",
-    "    big_list = background_list+platform_list+box_list\n",
+    "    big_list = background_list+platform_list+box_list+gettable_list\n",
     "    if not crashed:\n",
     "        big_list += [character]\n",
     "        \n",
@@ -397,6 +402,9 @@
     "        if screen.overlap(bod):\n",
     "            bod.draw(gameDisplay,screen.pos)\n",
     "\n",
+    "    display_score(score_list)\n",
+    "    \n",
+    "    \n",
     "  #  sleep(0.1)\n",
     "    pygame.display.flip()\n",
     "    clock.tick(45)\n",
