Anti-aliased lines and score keeping

--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -35,7 +35,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 1.9.6\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Sam/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:305: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n"
+     ]
+    }
+   ],
    "source": [
     "import pygame\n",
     "\n",
@@ -52,7 +68,7 @@
     "from Player import Player\n",
     "from Constants import G, box_size, S\n",
     "from time import sleep\n",
-    "from Make_Sounds import wood_bounce_sound, wood_break_sound, boom_sound\n",
+    "from Make_Sounds import wood_bounce_sound, wood_break_sound, boom_sound, fruit_sound\n",
     "\n",
     "\n",
     "                    \n",
@@ -130,23 +146,46 @@
     "shifts.append(np.array([0,0]))\n",
     "\n",
     "\n",
-    "icon_size = 20.0\n",
-    "display_fruit = Fruit([icon_size*1.5,icon_size*1.5])\n",
+    "icon_size = 25.0\n",
+    "icon_spacing = 8*icon_size\n",
+    "display_height = icon_size*1.5\n",
+    "display_fruit = Fruit([display_height,display_height])\n",
     "display_fruit.transform *= icon_size/display_fruit.size[0]\n",
-    "display_box = Box.Wood([210+icon_size*1.5,icon_size*1.5])\n",
+    "display_fruit.corporeal,display_fruit.solid = False,False\n",
+    "display_box = Box.Wood([icon_spacing+display_height,display_height])\n",
     "display_box.transform *= icon_size/display_box.size[0]\n",
+    "display_box.corporeal,display_box.solid = False,False\n",
+    "display_life = Box.Box([icon_spacing*2+display_height,display_height],black,line_color = (20,20,20),line_width = 2)\n",
+    "display_life.transform *= icon_size/display_life.size[0]\n",
+    "display_life.corporeal,display_life.solid = False,False\n",
     "\n",
     "\n",
+    "font = pygame.font.Font('freesansbold.ttf', int(icon_size*1.7))\n",
+    " \n",
     "def display_score(score_list):\n",
     "    \n",
+    "    if score_list['fruit'] > 99:\n",
+    "        score_list['fruit'] -= 100\n",
+    "        score_list['lives'] += 1\n",
     "    \n",
-    "    #score_list['lives']\n",
-    "    #score_list['fruit']\n",
-    "    #score_list['boxes']\n",
     "    display_fruit.draw(gameDisplay)\n",
-    "    display_box.draw(gameDisplay)\n",
+    "    text = font.render(str(score_list['fruit']), True, black, None)\n",
+    "    textRect = text.get_rect()  \n",
+    "    textRect.center = (display_height*2 + textRect[3]/2,display_height+icon_size*0.15) \n",
+    "    gameDisplay.blit(text, textRect) \n",
     "    \n",
-    "     \n",
+    "    display_box.draw(gameDisplay)\n",
+    "    text = font.render(str(score_list['boxes']), True, black, None)\n",
+    "    textRect = text.get_rect()  \n",
+    "    textRect.center = (icon_spacing + display_height*2 + textRect[3]/2,display_height+icon_size*0.15) \n",
+    "    gameDisplay.blit(text, textRect) \n",
+    "    \n",
+    "    display_life.draw(gameDisplay)\n",
+    "    text = font.render(str(score_list['lives']), True, black, None)\n",
+    "    textRect = text.get_rect()  \n",
+    "    textRect.center = (icon_spacing*2 + display_height*2 + textRect[3]/2,display_height+icon_size*0.15) \n",
+    "    gameDisplay.blit(text, textRect) \n",
+    "\n",
     "            \n",
     "left_key = False\n",
     "right_key = False\n",
@@ -178,7 +217,7 @@
     "            \n",
     "            relevant_one = None\n",
     "            foreground_list = []\n",
-    "            score_list = {'lives':14, 'fruit': 0, 'boxes':0}\n",
+    "            score_list = {'lives':14, 'fruit': 80, 'boxes':0}\n",
     "            \n",
     "            \n",
     "        else:    \n",
@@ -243,8 +282,8 @@
     "    \n",
     "    # Move every non-player object\n",
     "    for bod in box_list:\n",
-    "        bod.move()\n",
-    "        if bod.vel[1] >0:\n",
+    "        bod.move() # boxes not floating and not resting on will accelerate down\n",
+    "        if bod.vel[1] >0 and bod.solid:\n",
     "            for bod2 in box_list+platform_list:\n",
     "                if resolve_fall(bod,bod2):\n",
     "                    if not isinstance(bod2,Box.Box) or bod2.vel[1] == 0:\n",
@@ -277,6 +316,7 @@
     "                else:\n",
     "                    hit = False\n",
     "\n",
+    "                    \n",
     "                if dim>-1: # overlap!\n",
     "                   # print(dim)\n",
     "                    side = 2*(character.pos[dim] > i.pos[dim]) - 1\n",
@@ -291,7 +331,10 @@
     "                        if bounce and not break_box:\n",
     "                            if isinstance(character.resting_on,Body) or (jump_timer == character.jump_anticipation and dim == 1 and side == 1):\n",
     "                                break_box = True\n",
-    "                            wood_bounce_sound()\n",
+    "                            else:\n",
+    "                                if isinstance(i,Box.Bouncey_Wood):\n",
+    "                                    score_list['fruit'] += 1\n",
+    "                                wood_bounce_sound()\n",
     "\n",
     "                        if break_box:\n",
     "                            wood_break_sound()\n",
@@ -320,6 +363,8 @@
     "                        if converging: \n",
     "                            character.vel[dim] = 0.0\n",
     "                    else:\n",
+    "                        score_list['boxes'] += 1\n",
+    "                        score_list['fruit'] += i.fruit\n",
     "                        i.destroy()\n",
     "                        if isinstance(i,Box.Nitro) or isinstance(i,Box.Tnt):\n",
     "                            crashed = True\n",
@@ -339,19 +384,21 @@
     "                        relevant_one = i\n",
     "\n",
     "                elif hit: # if hit box overlap but no character overlap\n",
-    "                    if isinstance(i,Box.Wood):\n",
-    "                        i.destroy()\n",
-    "                        wood_break_sound()\n",
-    "                    elif isinstance(i,Box.Metal_Wood):\n",
-    "                        if character.flopping>0:\n",
+    "                    if isinstance(i,Box.Box):\n",
+    "                        score_list['boxes'] += 1\n",
+    "                        score_list['fruit'] += i.fruit\n",
+    "                        \n",
+    "                        if not isinstance(Box.Metal) and (not isinstance(i,Box.Metal_Wood) or character.flopping>0):\n",
     "                            i.destroy()\n",
-    "                            wood_break_sound()\n",
-    "                    elif isinstance(i,Box.Tnt) or isinstance(i,Box.Nitro):\n",
-    "                        i.destroy()\n",
-    "                        crashed = True\n",
-    "                        box_list.remove(i)\n",
-    "                        foreground_list.append(i)\n",
-    "                        boom_sound()\n",
+    "\n",
+    "                            if isinstance(i,Box.Tnt) or isinstance(i,Box.Nitro):\n",
+    "                                crashed = True\n",
+    "                                box_list.remove(i)\n",
+    "                                foreground_list.append(i)\n",
+    "                                boom_sound()\n",
+    "                            else:\n",
+    "                                wood_break_sound()\n",
+    "\n",
     "                        \n",
     "                else:\n",
     "                    if character.resting_on == i:\n",
@@ -366,7 +413,8 @@
     "                    if character.overlap(i):\n",
     "                       #i.color = tuple([i*.98 for i in list(i.color)])\n",
     "                        gettable_list.remove(i)\n",
-    "                        ##fruit_sound()\n",
+    "                        fruit_sound()\n",
+    "                        score_list['fruit'] += 1\n",
     "                        i.visible = False\n",
     "\n",
     "        # overlaps on both sides for a given dimension, this should by design happen rarely\n",
@@ -454,20 +502,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'text_rect' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-898a9bdd3328>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtext_rect\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'text_rect' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "platform_list"
+    "text_rect"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "platform_list[3].on_me"
+    "text = font.render(str(score_list['fruit']), True, black, None)\n",
+    "textRect = text.get_rect()  \n",
+    "textRect.center = (display_height*2.5,display_height) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<rect(103, 29, 18, 33)>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "textRect"
    ]
   },
   {
@@ -483,18 +565,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
   }
  },
  "nbformat": 4,
